--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -4,7 +4,8 @@
   --font-base: 'Poppins', sans-serif;
 
   --primary-color: #edf2f8;
-  --secondary-color: #313bac;
+  --secondary-color: #33b97a;
+  --optional-color: #0fac6a;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
