--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
   
     padding: 1rem 2rem;
     background: rgba(255, 255, 255, 0.25);
-    // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    // box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.18);
@@ -65,7 +65,7 @@
         transition: all 0.3s ease-in-out;
   
         &:hover {
-          color: var(--secondary-color);
+          color: var(--black-color);
         }
       }
   
@@ -101,22 +101,18 @@
   
     div {
       position: fixed;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      z-index: 5;
-  
-      padding: 1rem;
-  
-      width: 80%;
-      height: 100vh;
-      
       display: flex;
       justify-content: flex-end;
       align-items: flex-end;
       flex-direction: column;
-      
-      background: url('../../assets/bgWhite.png');
+      top: 0; bottom: 0;
+      right: 0;
+      z-index: 5;
+      padding: 1rem;
+      width: 80%;
+      height: 100vh;
+  
+      background: url('../../assets/bgAbstract.jpg');
       background-color: var(--white-color);
       background-size: cover;
       background-repeat: repeat;
@@ -132,22 +128,22 @@
       }
   
       ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-  
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
         flex-direction: column;
+        height: 100%;
+        width: 100%;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+  
   
         li {
           margin: 1rem;
   
           a {
-            color: var(--gray-color);
+            color: var(--white-color);
             text-decoration: none;
             font-size: 1rem;
             text-transform: uppercase;
