--- a/frontend_react/src/containers/Header/Header.scss
+++ b/frontend_react/src/containers/Header/Header.scss
@@ -1,6 +1,6 @@
 #home {
     position: relative;
-    background: url('../../assets/bgIMG.png');
+    background: url("../../assets/bgIMG.png");
     background-size: cover;
     background-repeat: repeat;
     background-position: center;
@@ -101,8 +101,8 @@
     margin-left: 1rem;
 
     div {
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
         border-radius: 50%;
 
         background: var(--white-color);
@@ -120,8 +120,8 @@
     }
 
     div:nth-child(2) {
-        width: 120px;
-        height: 120px;
+        width: 110px;
+        height: 110px;
         margin: 1.75rem;
     }
 
