--- a/frontend_react/src/containers/Work/Work.scss
+++ b/frontend_react/src/containers/Work/Work.scss
@@ -134,9 +134,10 @@
     position: relative;
     flex-direction: column;
 
-    h1 {
+    h4 {
         margin-top: 1rem;
         line-height: 1.5;
+        text-align: center;
     }
 
     .app_work-tag {
